refactor: remove predict image
